--- a/public/styles.css
+++ b/public/styles.css
@@ -1,7 +1,10 @@
-/* body {
-  background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
+body,
+html {
+  background: linear-gradient(-45deg, #dce4fd, #d3d8f5, #abdcee, #c5e0da);
   background-size: 400% 400%;
-  animation: gradient 15s ease infinite;
+  animation: gradient 30s ease infinite;
+  height: 100vh;
+  color: #f9fbf2;
 }
 
 @keyframes gradient {
@@ -14,6 +17,15 @@
   100% {
     background-position: 0% 50%;
   }
+}
+
+/* body,
+html {
+  background-image: url('https://source.unsplash.com/random/1920%C3%971200/?nature');
+  width: 100vw;
+  height: 100vh;
+  background-size: cover;
+  background-repeat: no-repeat;
 } */
 
 #app {
@@ -21,26 +33,71 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  /* align-items: center; */
-  /* text-align: center; */
-  /* min-height: 100vh; */
+  align-items: center;
+  text-align: center;
+  min-height: 80vh;
+}
+
+.container-day {
+  background-color: #0e1c36;
+  text-align: center;
+  padding: 20px;
+  animation: FadeIn 0.4s cubic-bezier(0.47, 0, 0.745, 0.715);
+  animation-delay: 0.1s;
+  display: grid;
+  grid-template-areas:
+    'name date . .'
+    'temp temp . .'
+    'temp temp descript descript'
+    'feels-like . sunrise sunset';
+}
+
+.name {
+  grid-area: name;
+}
+
+.temp {
+  grid-area: temp;
+  font-size: 8rem;
+}
+
+.weather {
+  grid-area: descript;
+  font-size: 2rem;
+}
+
+.date {
+  grid-area: date;
+}
+
+.sunrise {
+  grid-area: sunrise;
+}
+
+.sunset {
+  grid-area: sunset;
+}
+
+.feels-like {
+  grid-area: feels-like;
 }
 
 .forecast {
   display: flex;
   flex-direction: row;
-  justify-content: space-around;
+  justify-content: space-between;
 }
 
 @keyframes FadeIn {
   0% {
     opacity: 0;
-    transform: scale(0.8);
+    transform: scale(0.9);
   }
 
-  85% {
+  65% {
     opacity: 1;
     transform: scale(1.05);
+    transform: translateY(30px);
   }
   100% {
     transform: scale(1);
@@ -48,26 +105,53 @@
 }
 
 .forecast-card {
-  margin: 20px;
-  animation: FadeIn 0.4s linear;
+  /* margin: 5px; */
+  animation: FadeIn 0.4s cubic-bezier(0.47, 0, 0.745, 0.715);
   animation-fill-mode: both;
+  background-color: #0e1c36;
+  padding: 10px;
+  width: 100vw;
 }
 
 .forecast-card:nth-child(1) {
-  animation-delay: 0.2s;
+  animation-delay: 0.1s;
 }
 .forecast-card:nth-child(2) {
-  animation-delay: 0.4s;
+  animation-delay: 0.2s;
 }
 .forecast-card:nth-child(3) {
-  animation-delay: 0.6s;
+  animation-delay: 0.3s;
 }
 .forecast-card:nth-child(4) {
-  animation-delay: 0.8s;
+  animation-delay: 0.4s;
 }
 .forecast-card:nth-child(5) {
-  animation-delay: 1s;
+  animation-delay: 0.5s;
 }
 .forecast-card:nth-child(6) {
-  animation-delay: 1.2s;
+  animation-delay: 0.6s;
+}
+
+@keyframes FadeRight {
+  0% {
+    opacity: 0;
+    transform: scale(0.9);
+  }
+
+  65% {
+    opacity: 1;
+    transform: scale(1.05);
+    transform: translateX(20px);
+  }
+  100% {
+    transform: scale(1);
+  }
+}
+
+.navbar {
+  animation: FadeRight 0.4s cubic-bezier(0.47, 0, 0.745, 0.715);
+}
+
+.hours {
+  animation: FadeIn 0.4s cubic-bezier(0.47, 0, 0.745, 0.715);
 }
